# spark-jobs

./: pyproject.toml
spark_jobs/jobs/weather/: ingest_stations.py  util.py  yearly_weather_ingestion.py
spark_jobs/util/: spark.py
