[tool.poetry]
name = "spark-jobs"
version = "0.1.0"
description = "Random assortment of jobs"
authors = ["Jasper Groot"]

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "^3.3.0"
boto3 = "^1.24.61"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
